[gd_scene load_steps=3 format=3 uid="uid://bqe3vsxnn8umo"]

[ext_resource type="Script" uid="uid://dpbq1rf375jdp" path="res://Player/sneak_detect.gd" id="1_iytpq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ikhdr"]
radius = 0.25
height = 1.829

[node name="SneakDetect" type="Node3D"]
script = ExtResource("1_iytpq")
start_check = -2.0
end_check = 2.0

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="HeadForward" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -1)
collision_mask = 8

[node name="HeadLeft" type="RayCast3D" parent="Head"]
target_position = Vector3(-1, 0, 0)
collision_mask = 8

[node name="HeadBack" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, 1)
collision_mask = 8

[node name="HeadRight" type="RayCast3D" parent="Head"]
target_position = Vector3(1, 0, 0)
collision_mask = 8

[node name="ShapeCast3D" type="ShapeCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
shape = SubResource("CapsuleShape3D_ikhdr")
target_position = Vector3(0, 0, -2)
collision_mask = 8

[node name="Hip" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="HipForward" type="RayCast3D" parent="Hip"]
target_position = Vector3(0, 0, -1)
collision_mask = 8

[node name="HipLeft" type="RayCast3D" parent="Hip"]
target_position = Vector3(-1, 0, 0)
collision_mask = 8

[node name="HipBack" type="RayCast3D" parent="Hip"]
target_position = Vector3(0, 0, 1)
collision_mask = 8

[node name="HipRight" type="RayCast3D" parent="Hip"]
target_position = Vector3(1, 0, 0)
collision_mask = 8
